[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Enemies/Shottyman/shottyman.png" type="Texture" id=1]
[ext_resource path="res://Characters/Enemies/Shottyman.gd" type="Script" id=2]
[ext_resource path="res://SFX/SFX_guns/Kenney gun sound export Shotgun fire.wav" type="AudioStream" id=3]
[ext_resource path="res://SFX/SFX_shotty/Shottyman sounds 2-Audio.wav" type="AudioStream" id=4]
[ext_resource path="res://SFX/SFX_shotty/Shottyman sounds 3-Audio.wav" type="AudioStream" id=5]
[ext_resource path="res://SFX/SFX_shotty/Shottyman sounds 5-Audio.wav" type="AudioStream" id=6]
[ext_resource path="res://SFX/SFX_shotty/Shottyman sounds 6-Audio.wav" type="AudioStream" id=7]
[ext_resource path="res://SFX/SFX_shotty/Shottyman sounds 4-Audio.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 18.3004

[sub_resource type="Animation" id=2]
resource_name = "hit_animation"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.996078, 0.996078, 0.996078, 1 ), Color( 0.658824, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Shottyman" type="KinematicBody2D"]
modulate = Color( 0.996078, 0.996078, 0.996078, 1 )
z_index = 11
collision_layer = 4
collision_mask = 31
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.55518, 1.1892 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 11

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="ReloadTime" type="Timer" parent="."]
autostart = true

[node name="RotationNode" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="RotationNode"]
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="RotationNode"]
position = Vector2( 30.8403, 9.38727 )

[node name="AudioWeapon" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SFX_Levels"

[node name="AudioSFX1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX_Levels"

[node name="AudioSFX2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX_Levels"

[node name="AudioSFX3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "SFX_Levels"

[node name="AudioSFX4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "SFX_Levels"

[node name="AudioSFX5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "SFX_Levels"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit_animation = SubResource( 2 )

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
